namespace ResearchFlow.Models;

public enum ResearchPriority { Low = 1, Medium = 2, High = 3 }
public enum ResearchStatus { Planned = 1, InProgress = 2, Completed = 3 }